# grammar2regex

./: .gitignore  Pipfile  README.md  cfg2regex.py  grammargraph.py  nfa.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  setup.cfg  setup.py  sugrex.py
grammar_to_regex/: cfg2regex.py  grammargraph.py  helpers.py  nfa.py  regex.py  type_defs.py
grammar_to_regex/tests/: test_cfg2regex.py  test_grammargraph.py  test_helpers.py
src/grammar_to_regex/: cfg2regex.py  grammar_to_regular.py  helpers.py  nfa.py  regex.py  type_defs.py
tests/: grep_grammar.py  test_cfg2regex.py  test_doctests.py  test_grammar_to_regular.py  test_grammargraph.py  test_helpers.py  test_sugrex.py
