[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "grammar_to_regex"
authors = [
  { name="Dominic Steinhöfel", email="dominic.steinhoefel@cispa.de" },
]
description = "Conversion of a (sub) grammar to (approximated) regular expressions."
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version", "readme"]

dependencies = [
    "grammar_graph>=0.1.14",
    "proxyorderedset>=0.3.0",
    "pydot>=1.4.2",
    "wheel>=0.37.1",
    "z3-solver>=4.8.17.0",
]

[project.optional-dependencies]
test = [
    "fuzzingbook>=1.1",
    "pytest-cov>=3.0.0",
    "pytest-forked>=1.3.0",
    "pytest-html>=3.1.1",
    "pytest-profiling>=1.7.0",
    "pytest-pycharm>=0.7.0",
    "pytest-rerunfailures>=10.2",
    "pytest-xdist>=2.4.0",
    "pytest>=7.1.2",
]

[project.urls]
"Homepage" = "https://github.com/rindPHI/grammar2regex/"
"Bug Tracker" = "https://github.com/rindPHI/grammar2regex/issues"

[tool.setuptools.dynamic]
version = {attr = "grammar_to_regex.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

